--- a/DollarComputers/App.config
+++ b/DollarComputers/App.config
@@ -17,4 +17,14 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="Product" connectionString="data source=dollarcomputers.database.windows.net;initial catalog=DollarComputers;persist security info=True;user id=jellery;password=7Nestea!2;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="Product" connectionString="data source=JUSTIN-DESKTOP;initial catalog=dollar_computers;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="DollarComputers.Properties.Settings.DollarComputersConnectionString"
+      connectionString="Data Source=dollarcomputers.database.windows.net;Initial Catalog=DollarComputers;Persist Security Info=True;User ID=jellery;Password=7Nestea!2"
+      providerName="System.Data.SqlClient" />
+    <add name="DollarComputers.Properties.Settings.dollar_computersConnectionString"
+      connectionString="Data Source=JUSTIN-DESKTOP;Initial Catalog=dollar_computers;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
+</configuration>
